# spit

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  lib.rs  main.rs  request.rs  swagger.rs
