[package]
name = "spit"
version = "0.1.0"
edition = "2021"
authors = ['Erick Jesus <erick.jesus2060@gmail.com>']

[dependencies]
actix-web = "4.0"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0.4"
chrono = { version = "0.4", features = ["serde"] }
faker_rand = "0.1"
uuid = { version = "1.0", features = ["v4"] }
fake = "3.0.1"
rand = "0.8.5"
serde_yaml = "0.9.34"
env_logger = "0.11"
log = "0.4"
regex = "1.11.1"
